fix: correct height for cards on explore page. Still have issue with cut off on right side for large screens.

--- a/client/src/pages/ExplorePage.module.css
+++ b/client/src/pages/ExplorePage.module.css
@@ -6,6 +6,9 @@
 
 * {
   font-family: 'Montserrat', sans-serif !important;
+  /* padding: 0;
+  margin: 0; */
+
 }
 
 :root {
@@ -24,7 +27,9 @@ body {
   font-family: 'Montserrat', sans-serif;
   background: var(--bg-page);
   color: var(--text-primary);
-}
+  /* overflow-x: hidden; */
+  border: 2px solid pink;
+} 
 
 
 .explore-page {
@@ -33,6 +38,7 @@ body {
   width: 93.5vw;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  border: 2px solid yellow;
 }
 
 
@@ -73,6 +79,7 @@ body {
   margin: 0 auto;
   overflow: visible;
   border: 2px solid blue;
+  /* box-sizing: border-box;  */
 }
 
 
@@ -105,6 +112,8 @@ body {
   border-radius: 8px;
   display: block;
   align-items: center;
+  height: fit-content; 
+  padding-bottom: 10vh;
 }
 
 /* .mood-energy-chart-explore-pg {
@@ -122,6 +131,7 @@ body {
   height: 52vh;
   border-radius: 8px;
   font-size: 0.75rem;
+
 }
 
 .genreDropdown {
@@ -136,7 +146,8 @@ body {
   align-items: center;
   border-radius: 8px;
   background-color: white;
-  height: 90vh;
+  height: fit-content;
+  padding-bottom: 8vh;
   font-size: 0.8rem;
 }
 
